@@ -359,29 +359,38 @@ dnl MULE_CHECK_BFD
 dnl check if bfd.h is on the system and usable
 dnl ----------------------------------------------------
 AC_DEFUN([MULE_CHECK_BFD],
-[
+[AC_REQUIRE([MULE_CHECK_NLS])dnl
+
 	AC_MSG_CHECKING([for bfd])
-	MULE_BACKUP([LIBS])
-	MULE_BACKUP([LDFLAGS])
-	MULE_PREPEND([LIBS], [-lbfd -liberty ${ZLIB_LIBS}])
-	MULE_APPEND([LDFLAGS], [${ZLIB_LDFLAGS}])
-	AC_LINK_IFELSE([
-		AC_LANG_PROGRAM([[
-			#include <ansidecl.h>
-			#include <bfd.h>
-		]], [[
-			char *dummy = bfd_errmsg(bfd_get_error());
-		]])
-	], [
-		AC_MSG_RESULT([yes])
-		BFD_CPPFLAGS="-DHAVE_BFD"
-		BFD_LIBS="-lbfd -liberty"
-	], [
-		AC_MSG_RESULT([no])
-		MULE_WARNING([bfd.h not found or unusable, please install binutils development package if you are a developer or want to help testing aMule])
-	])
-	MULE_RESTORE([LIBS])
-	MULE_RESTORE([LDFLAGS])
+	result=no
+	for bfd_ldadd in "" "${LIBINTL}"; do
+		MULE_BACKUP([LIBS])
+		MULE_BACKUP([LDFLAGS])
+		MULE_PREPEND([LIBS], [-lbfd -liberty ${bfd_ldadd} ${ZLIB_LIBS}])
+		MULE_APPEND([LDFLAGS], [${ZLIB_LDFLAGS}])
+		AC_LINK_IFELSE([
+			AC_LANG_PROGRAM([[
+				#include <ansidecl.h>
+				#include <bfd.h>
+			]], [[
+				char *dummy = bfd_errmsg(bfd_get_error());
+			]])
+		], [
+			result=yes
+			BFD_CPPFLAGS="-DHAVE_BFD"
+			BFD_LIBS="-lbfd -liberty ${bfd_ldadd}"
+			MULE_RESTORE([LIBS])
+			MULE_RESTORE([LDFLAGS])
+			break
+		])
+		MULE_RESTORE([LIBS])
+		MULE_RESTORE([LDFLAGS])
+	done
+
+	AC_MSG_RESULT([$result])
+
+	AS_IF([test $result = no],
+		[MULE_WARNING([bfd.h not found or unusable, please install binutils development package if you are a developer or want to help testing aMule])])
 
 AC_SUBST([BFD_CPPFLAGS])dnl
 AC_SUBST([BFD_LIBS])dnl
